--- a/Project2/View/PhotoTableViewCell.xib
+++ b/Project2/View/PhotoTableViewCell.xib
@@ -12,26 +12,36 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhotoTableViewCell" rowHeight="99" id="KGk-i7-Jjw" customClass="PhotoTableViewCell" customModule="Project2" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="104" height="99"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhotoTableViewCell" rowHeight="98" id="KGk-i7-Jjw" customClass="PhotoTableViewCell" customModule="Project2" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="104" height="98"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="104" height="98.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="104" height="97.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="38H-Pa-nZg">
-                        <rect key="frame" x="0.0" y="0.0" width="104" height="98.5"/>
-                    </imageView>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6uk-9F-Nge">
+                        <rect key="frame" x="0.0" y="0.0" width="104" height="97.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="FWp-Jz-93a">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="38H-Pa-nZg" secondAttribute="bottom" id="F5V-L8-fD2"/>
-                    <constraint firstItem="38H-Pa-nZg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="GfI-fr-cbI"/>
-                    <constraint firstItem="38H-Pa-nZg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="KU3-kf-1ao"/>
-                    <constraint firstAttribute="trailing" secondItem="38H-Pa-nZg" secondAttribute="trailing" id="N86-ZW-eMp"/>
+                    <constraint firstItem="6uk-9F-Nge" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OQv-pf-k2G"/>
+                    <constraint firstAttribute="bottom" secondItem="6uk-9F-Nge" secondAttribute="bottom" id="Tod-ce-Nce"/>
+                    <constraint firstItem="6uk-9F-Nge" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Wa1-1X-4GP"/>
+                    <constraint firstAttribute="trailing" secondItem="6uk-9F-Nge" secondAttribute="trailing" id="abO-Jz-0Uf"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="-35.200000000000003" y="179.46026986506749"/>
+            <connections>
+                <outlet property="collectionView" destination="6uk-9F-Nge" id="Z1K-3u-FAE"/>
+            </connections>
+            <point key="canvasLocation" x="-35.200000000000003" y="179.91004497751126"/>
         </tableViewCell>
     </objects>
 </document>
