--- a/Project2/View/Base.lproj/Main.storyboard
+++ b/Project2/View/Base.lproj/Main.storyboard
@@ -18,16 +18,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DZf-mM-usS">
-                                <rect key="frame" x="67.5" y="64" width="240" height="240"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to edit background" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WSb-rm-uin">
+                                <rect key="frame" x="99" y="449" width="177" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DZf-mM-usS">
+                                <rect key="frame" x="20" y="64" width="335" height="335"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="Cd7-0w-sOy"/>
                                     <constraint firstAttribute="width" secondItem="DZf-mM-usS" secondAttribute="height" multiplier="1:1" id="XqY-bP-zBK"/>
                                 </constraints>
                             </imageView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2Y-E1-iHA">
-                                <rect key="frame" x="0.0" y="404" width="375" height="263"/>
+                                <rect key="frame" x="0.0" y="449" width="375" height="218"/>
                                 <connections>
                                     <segue destination="8WY-QU-6sx" kind="embed" id="gvH-nm-dWh"/>
                                 </connections>
@@ -44,9 +49,12 @@
                             <constraint firstItem="DZf-mM-usS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EOD-Bq-wnu"/>
                             <constraint firstItem="k2Y-E1-iHA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GRS-Ul-4od"/>
                             <constraint firstItem="k2Y-E1-iHA" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="KhU-Kl-S9f"/>
-                            <constraint firstItem="k2Y-E1-iHA" firstAttribute="top" secondItem="DZf-mM-usS" secondAttribute="bottom" constant="100" id="RCg-BY-US3"/>
+                            <constraint firstItem="WSb-rm-uin" firstAttribute="top" secondItem="k2Y-E1-iHA" secondAttribute="top" id="PWa-VO-7oF"/>
+                            <constraint firstItem="k2Y-E1-iHA" firstAttribute="top" secondItem="DZf-mM-usS" secondAttribute="bottom" constant="50" id="RCg-BY-US3"/>
+                            <constraint firstItem="WSb-rm-uin" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SOq-Do-m6D"/>
                             <constraint firstItem="k2Y-E1-iHA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Whc-J1-e2J"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ic4-BR-cwQ" secondAttribute="trailing" constant="16" id="aCz-bw-aE9"/>
+                            <constraint firstItem="DZf-mM-usS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="wa0-V2-l3L"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -68,13 +76,43 @@
                     <view key="view" contentMode="scaleToFill" id="5m0-ak-QCl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ab-6z-EN0">
+                                <rect key="frame" x="20" y="20" width="335" height="335"/>
+                                <subviews>
+                                    <containerView opaque="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="YPo-N2-O7C">
+                                        <rect key="frame" x="-20" y="0.0" width="375" height="452"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="452" id="aes-7q-qx5"/>
+                                        </constraints>
+                                        <connections>
+                                            <segue destination="kdP-rc-oYy" kind="embed" id="Mg1-dc-bDX"/>
+                                        </connections>
+                                    </containerView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="YPo-N2-O7C" secondAttribute="trailing" constant="20" id="Hdy-Pu-Bwb"/>
+                                    <constraint firstAttribute="bottom" secondItem="YPo-N2-O7C" secondAttribute="bottom" constant="-20" id="eaA-I6-W8Q"/>
+                                    <constraint firstAttribute="width" secondItem="3Ab-6z-EN0" secondAttribute="height" multiplier="1:1" id="sPC-dK-7qd"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Va0-bd-i16" firstAttribute="trailing" secondItem="YPo-N2-O7C" secondAttribute="trailing" id="FR0-CO-6ud"/>
+                            <constraint firstItem="Va0-bd-i16" firstAttribute="leading" secondItem="YPo-N2-O7C" secondAttribute="leading" id="GxX-ag-hzz"/>
+                            <constraint firstItem="3Ab-6z-EN0" firstAttribute="leading" secondItem="Va0-bd-i16" secondAttribute="leading" constant="20" id="SP0-8k-IAe"/>
+                            <constraint firstItem="3Ab-6z-EN0" firstAttribute="top" secondItem="Va0-bd-i16" secondAttribute="top" id="XGh-ef-po4"/>
+                            <constraint firstItem="YPo-N2-O7C" firstAttribute="top" secondItem="Va0-bd-i16" secondAttribute="top" id="YmQ-Eg-OsB"/>
+                            <constraint firstItem="YPo-N2-O7C" firstAttribute="width" secondItem="5m0-ak-QCl" secondAttribute="width" id="a0B-gh-tDs"/>
+                            <constraint firstItem="3Ab-6z-EN0" firstAttribute="centerX" secondItem="5m0-ak-QCl" secondAttribute="centerX" id="z2P-BI-leJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Va0-bd-i16"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o7i-A8-mCb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1668" y="-564"/>
+            <point key="canvasLocation" x="1668" y="-564.46776611694156"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pdf-YM-237">
@@ -99,11 +137,11 @@
             <objects>
                 <viewController id="8WY-QU-6sx" customClass="ContainerViewController" customModule="Project2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3Ka-Eh-diH">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="263"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="218"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iPQ-Kh-UVH">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="263"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="218"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -122,6 +160,31 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hru-rT-4va" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="837.60000000000002" y="-1.3493253373313345"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1cH-qy-Hdq">
+            <objects>
+                <viewController id="kdP-rc-oYy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="F4M-Fc-5jq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="452"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wxt-HJ-lTu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="452"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="wxt-HJ-lTu" secondAttribute="bottom" id="2Ns-2f-DRz"/>
+                            <constraint firstItem="wxt-HJ-lTu" firstAttribute="top" secondItem="F4M-Fc-5jq" secondAttribute="top" id="VjA-Ma-1nc"/>
+                            <constraint firstAttribute="trailing" secondItem="wxt-HJ-lTu" secondAttribute="trailing" id="r1G-pp-oZH"/>
+                            <constraint firstItem="wxt-HJ-lTu" firstAttribute="leading" secondItem="F4M-Fc-5jq" secondAttribute="leading" id="zP7-X6-EZg"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0uf-Kw-DK7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2437.5999999999999" y="-564.91754122938539"/>
         </scene>
     </scenes>
     <resources>
